# lipsync-corrector

./: .gitignore  README.md  pyproject.toml  swap.py
cli/: main.py
core/: blender.py  device.py  face_tracker.py  lipsync_model.py  mouth_region.py  video_io.py  wav2lip_model.py
core/transcription/: __init__.py  models.py  serializers.py  transcriber.py
core/translation/: __init__.py  prompt.py  translator.py
core/tts/: __init__.py  assembler.py  reference.py  synthesizer.py
core/wav2lip/: __init__.py  audio.py  frame_sync.py
docs/milestones/: blending-pass.md  milestone-0.md  milestone-1.md  milestone-2.md  milestone-3a.md  milestone-3b.md  stt-transcription.md  translation.md  tts.md
docs/superpowers/plans/: 2026-04-11-milestone-0-face-swap-quickwin.md  2026-04-12-milestone-1-video-io.md  2026-04-12-milestone-2-face-tracker.md  2026-04-12-milestone-3a-pipeline-scaffold.md  2026-04-13-milestone-3b-wav2lip-integration.md  2026-04-14-stt-transcription.md  (+3 more)
examples/: transcribe_demo.py  translate_demo.py  tts_demo.py  veo_stt.en.json  veo_stt.json
tests/: conftest.py  test_blender.py  test_cli.py  test_device.py  test_face_tracker.py  test_lipsync_model.py  test_mouth_region.py  test_swap.py  test_transcriber.py  test_transcription_models.py  test_transcription_serializers.py  test_translation_prompt.py  test_translator_integration.py  test_translator_unit.py  test_tts_assembler.py  test_tts_reference.py  test_tts_synthesizer.py  test_video_io.py  test_wav2lip_audio.py  test_wav2lip_frame_sync.py  test_wav2lip_model_inference.py  test_wav2lip_model_unit.py
(+5 files in other folders)
