[project]
name = "lipsync-corrector"
version = "0.0.1"
description = "Lip-sync corrector and face-swap experiments on Apple Silicon"
requires-python = "==3.11.*"
dependencies = [
    "insightface>=0.7.3",
    "onnxruntime>=1.17.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26,<2.0",
    "torch>=2.1,<3.0",
    "librosa>=0.10,<0.11",
    "soundfile>=0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
